dark mode code fix

--- a/assets/main.css
+++ b/assets/main.css
@@ -18,8 +18,8 @@
   --bg: #162c40;
   --bg-secondary: #071521;
   --border-color: #0d2538;
-  --code: #263238;
-  --code-color: #ebf4f1;
+  --code: #f1e7d0;
+  --code-color: #162c40;
   --pre: #263238;
   --pre-color: #fdf9f3;
 }
